# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  imgui.ini
assets/: next.txt
assets/shaders/: main.glsl
libs/glad/: glad.c
libs/glad/include/glad/: glad.h
libs/imgui/: CMakeLists.txt
shaders/: main.glsl
src/: Camera.cpp  Framebuffer.cpp  GuiHelper.cpp  GuiHelper.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Tracer.cpp  Tracer.h  main.cpp
src/RayTracer/: Logger.cpp  Logger.h  RayTracer.cpp  RayTracer.h
src/RayTracer/Renderer/: Camera.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h
src/Rendering/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GuiHelper.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Utils/: Logger.cpp  Logger.h  Utils.h
src/Window/: Input.h  Window.cpp  Window.h
